# Ziyofat_day

./: .gitignore  FEEDBACKS.md  LICENSE  README.md  main.py  pyproject.toml
app/: config.py  database.py  dependencies.py  enums.py  main.py  models.py  utils.py
app/admin/: __init__.py  auth.py  settings.py  views.py
app/middleware/: dbmiddleware.py
app/routers/: __init__.py  auth.py  dining_table.py  menu.py  order.py  user.py
app/routers/admin/: settings.py  views.py
app/routers/auth/: login.py
app/schemas/: __init__.py  schemas.py
migrations/: env.py
migrations/versions/: 01807c169da0_create_tokenblacklist.py  1055116bf7a5_change_table_status.py  21d1705d3b98_change_table_status.py  56704b67437b_change_table_status.py  5fd915fc3aae_cange_menuitem.py  a8d9436f9d78_create_tables.py  cab03a54465a_change_tables_and_create_media.py  dda04903e2ff_change_table_status_enum.py  e24142c81f3a_cange_menucategory.py  ebdb6e43a011_change_user_table.py
